--- a/index.html
+++ b/index.html
@@ -274,9 +274,7 @@ src="https://www.facebook.com/tr?id=1290939398865251&ev=PageView&noscript=1"
 		<div class="elementor-element elementor-element-756f732 e-con-full e-flex e-con e-child" data-id="756f732" data-element_type="container" data-settings="{" background_background":"classic"}"="">
 				<div class="elementor-element elementor-element-10bf9ed8 elementor-widget elementor-widget-heading" data-id="10bf9ed8" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h2 class="elementor-heading-title elementor-size-default">CONTATO:<br><br>
-Telefone: (21) 9510-1326<br><br>
-E-mail: <a href="mailto:watahyanownl@outlook.com" style="font-size: 18px">watahyanownl@outlook.com</a><br></h2>				</div>
+					<h2 class="elementor-heading-title elementor-size-default">CONTATO:<br><br>(22) 2007-7538 E-mail: <a href="mailto:watahyanownl@outlook.com" style="font-size: 18px">watahyanownl@outlook.com</a><br></h2>				</div>
 				</div>
 				<div class="elementor-element elementor-element-13bd87ba elementor-widget elementor-widget-heading" data-id="13bd87ba" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
@@ -356,7 +354,7 @@ E-mail: <a href="mailto:watahyanownl@outlook.com" style="font-size: 18px">watahy
 				<div class="elementor-element elementor-element-4ab2337 elementor-mobile-align-center elementor-align-center elementor-widget elementor-widget-button" data-id="4ab2337" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://wa.me/12997021326?text=Ol%C3%A1">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://wa.me/5522920077538?text=Ol%C3%A1">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">CONVERSAR AGORA</span>
 					</span>
@@ -389,7 +387,7 @@ Situação Cadastral: Ativa <br><br>
 📍 Endereço:
 Avenida Presidente Dutra, 2240 – Bairro Brasil <br>
 Vitória da Conquista - BA, 45051-030 <br>
-📞 Telefone: (77) 3425-1326 <br>
+📞 Telefone: (22) 92007-7538 <br>
 ✉️ E-mail: <a href="mailto:fiscal@adapcontabilidade.com.br" style="font-size: 16px">fiscal@adapcontabilidade.com.br</a><br>
 
 </h2>				</div>
