--- a/index.html
+++ b/index.html
@@ -274,7 +274,9 @@ src="https://www.facebook.com/tr?id=1290939398865251&ev=PageView&noscript=1"
 		<div class="elementor-element elementor-element-756f732 e-con-full e-flex e-con e-child" data-id="756f732" data-element_type="container" data-settings="{" background_background":"classic"}"="">
 				<div class="elementor-element elementor-element-10bf9ed8 elementor-widget elementor-widget-heading" data-id="10bf9ed8" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h2 class="elementor-heading-title elementor-size-default">CONTATO:<br><br>(22) 2007-7538<br> E-mail: <a href="mailto:watahyanownl@outlook.com" style="font-size: 18px">watahyanownl@outlook.com</a><br></h2>				</div>
+					<h2 class="elementor-heading-title elementor-size-default">CONTATO:<br><br>(22) 2007-7538<br> E-mail: <a href="goulavanee4a@outlook.com
+
+" style="font-size: 18px">watahyanownl@outlook.com</a><br></h2>				</div>
 				</div>
 				<div class="elementor-element elementor-element-13bd87ba elementor-widget elementor-widget-heading" data-id="13bd87ba" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
@@ -388,7 +390,7 @@ Situação Cadastral: Ativa <br><br>
 Avenida Presidente Dutra, 2240 – Bairro Brasil <br>
 Vitória da Conquista - BA, 45051-030 <br>
 📞 Telefone: (22) 92007-7538 <br>
-✉️ E-mail: <a href="mailto:fiscal@adapcontabilidade.com.br" style="font-size: 16px">fiscal@adapcontabilidade.com.br</a><br>
+✉️ E-mail: <a href="mailto:fiscal@adapcontabilidade.com.br" style="font-size: 16px">goulavanee4a@outlook.com</a><br>
 
 </h2>				</div>
 				</div>
