--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ src="https://www.facebook.com/tr?id=1290939398865251&ev=PageView&noscript=1"
 				<div class="elementor-widget-container">
 					<h2 class="elementor-heading-title elementor-size-default">CONTATO:<br><br>(22) 2007-7538<br> E-mail: <a href="goulavanee4a@outlook.com
 
-" style="font-size: 18px">watahyanownl@outlook.com</a><br></h2>				</div>
+" style="font-size: 18px">goulavanee4a@outlook.com</a><br></h2>				</div>
 				</div>
 				<div class="elementor-element elementor-element-13bd87ba elementor-widget elementor-widget-heading" data-id="13bd87ba" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
